# argodsm-SOR

./: .gitignore  README.md  build.sh  testing.py
SOR-C-reference/: CMakeLists.txt  sor_main.cc
SOR-DSM-1/: CMakeLists.txt  sor_main.cc  sor_params.h
SOR-DSM-2/: CMakeLists.txt  sor_main.cc  sor_params.h
SOR-DSM-3/: CMakeLists.txt  sor_main.cc  sor_params.h
SOR-MPI/: CMakeLists.txt  array_index_f2c1d.h  main.cpp  sor_params.h
collector/: main.go
misc/: cvm-info.txt  main.py  test-results.csv  test-results.json
src/: dsm-C-2D-grid-halos.cc
